hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - domain1.example.org
    - domain2.example.org
    secretName: hello-kubernetes-tls
  rules:
  - host: domain1.example.org
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: domain2.example.org
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
